--- a/style.css
+++ b/style.css
@@ -22,13 +22,21 @@ body{
     position: absolute;
     width: 100%;
     display: grid;
-    grid-template-areas: "About Store Leer Leer Leer Leer Leer Leer Gmail Bilder Menu Anmelden";
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(1;1fr);
+    grid-template-areas: "About Store Gmail Bilder Menu Anmelden";
     
 }
 
 .navgridcontainer {
     max-height: 100%;
     position:absolute;
+    border: dashed blue 1px;
+}
+.navgridcontainer img {
+    width:100%;
+    max-height: 100%;
+    object-fit:cover;
 }
 #navabout {
     background-color: ivory;
@@ -57,15 +65,7 @@ body{
     
 
 }
-#picanmelden {
-    border-radius: 100%;
-    border-color: rgb(53, 142, 172);
-    border-style: solid;
-    max-width: max-content; 
-    position: relative;
-    height: 50%;
-    width: 50%;
-    display: inline;
+
     
 }
 
